# walio_ros2_workspace

./: .buildinfo  .special.html  README.md  architecture.html  cicd.html  compilation.html  index.html  jetson.html  joy_config.yaml  objects.inv  prerequis.html  search.html  searchindex.js  utilisation.html
.doctrees/: .special.doctree  architecture.doctree  cicd.doctree  compilation.doctree  environment.pickle  index.doctree  jetson.doctree  prerequis.doctree  utilisation.doctree
.github/workflows/: ros2_ci.yaml  sphinx_docs.yaml
_sources/: cicd.rst.txt  index.rst.txt  prerequis.rst.txt
docs/source/: .special.rst  architecture.rst  cicd.rst  compilation.rst  conf.py  index.rst  installation.rst  jetson.rst  packages.rst  prerequis.rst  usage.rst  utilisation.rst
docs/source/_static/: hacks.css
launch/: joy_config.yaml  kinova_joy.py  opencn_joy.py  teleop-launch.py  teleop.yaml  walio_controller.launch  walio_controller.launch.save  walio_controller.py
opencn_target/: S85opencn  basic_pg.hal  start.sh
scripts/: install_capnp.sh  uninstall_capnp.sh
src/motion_control/: CMakeLists.txt  package.xml
src/motion_control/src/: motion_control_node.cpp
src/opencn_communication_interfaces/: CMakeLists.txt  package.xml
src/opencn_communication_interfaces/msg/: Param.msg  Pin.msg
src/opencn_communication_interfaces/srv/: Init.srv  Params.srv  Pins.srv
src/opencn_helpers/: CMakeLists.txt  package.xml
src/opencn_pkg/: CMakeLists.txt  package.xml
src/opencn_pkg/include/opencn_pkg/: cmctl.h  component.h  component_specific.h  hal.h  param.h  pins.h  transaction.h
src/opencn_pkg/include/opencn_pkg/opencn-interface/: opencn_interface.capnp.h
src/opencn_pkg/src/: opencn_interface.capnp.c++  opencn_node.cpp  transaction.cpp
